syntax = "proto3";

package com.carbonplayer;

option java_package = "com.carbonplayer.model.entity.proto.innerjam.visuals";
option java_outer_classname = "ImageReferenceV1Proto";
option optimize_for = LITE_RUNTIME;

import "innerjam/visuals/Color.proto";

message ImageReference {

    enum AspectRatio {
        ASPECT_RATIO_UNSPECIFIED = 0;
        ONE_BY_ONE = 1;
        TWO_BY_ONE = 2;
        THREE_BY_FOUR = 3;
        FOUR_BY_THREE = 4;
        THREE_BY_TWO = 5;
        FIVE_BY_ONE = 6;
    }

    enum ImageSource {
        IMAGE_SOURCE_UNSPECIFIED = 0;
        METAJAM = 1;
        ARTPOP = 2;
        STATIC = 3;
    }

    string url = 1;
    uint32 width = 2;
    uint32 height = 3;
    AspectRatio aspectRatio = 4;
    Color representativeColor = 5;
    bool lowQualityAutogenerated = 6;
    ImageSource source = 7;


}